add something in a paragraph

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>Se reparten las cartas y se coloca (EN EL MISMO ORDEN QUE ESTAN EN PANTALLA) el numero de carta que le corresponde a cada uno sin que nadie vea.</p>
         
         <button onclick="actualizarTiempo()">INICIAR TEMPORIZADOR</button>
-        <p>(no pausar todavia nose como)</p>
+        <p>(no pausar todavia nose como, solo tocar una vez)</p>
         <div class="cont-temporizador">
             <div class="bloque">
                 <div class="segundos" id="segundos">--</div>
