modify fuction ronda

--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
         </div>
         <h3>PARTICIPANTES</h3>
         <p id="jugadores"></p>
-        <h4 id="Mafia">MAFIA</h4>
+        <h4 id="Mafia">RONDAS</h4>
         <button type="submit" onclick="ronda()">click aca para iniciar una ronda</button>
         <p class="ronda" id="ronda"></p>
         <a href="#inicio">Volver a inicio</a>
     </main>
-    <footer></footer>
+    <footer>
+        <h5>(icono de copy)Developed by Belmetiuk Joaquin</h5>
+    </footer>
     <script src="/apps/app.js"></script>
 </body>
 
