add an fomrs for the fuction ronda

--- a/index.html
+++ b/index.html
@@ -39,8 +39,19 @@
         <h3>PARTICIPANTES</h3>
         <p id="jugadores"></p>
         <h4 id="Mafia">RONDAS</h4>
-        <button type="submit" onclick="ronda()">click aca para iniciar una ronda</button>
         <p class="ronda" id="ronda"></p>
+        <form action="" method="get" name="formulario" id="formulario">
+            <input type="text" class="mafia" id="mafia" placeholder="Nombre de mafia">
+            <input type="text" class="muerto" id="muerto" placeholder="Nombre de quien quiere matar">
+            <input type="text" class="policia" id="policia" placeholder="Nombre del policia">
+            <input type="text" class="doctor" id="doctor" placeholder="Nombre del doctor">
+            <input type="text" class="curado" id="curado" placeholder="Nombre de quien quiera curar">
+            <input type="text" class="puta" id="puta" placeholder="Nombre de la puta">
+            <input type="text" class="anulado" id="anulado" placeholder="Nombre de quien quiera anular">
+            <input type="text" class="carnicero" id="carnicero" placeholder="Nombre del carnicero">
+            <input type="text" class="callado" id="callado" placeholder="Nombre del callado">
+            <button type="submit" class="btn">Enviar</button>
+        </form>
         <a href="#inicio">Volver a inicio</a>
     </main>
     <footer>
