change inputs to selects and add new fuvtion for this

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 <body id="body">
     <header>
-        <h1 id="inicio">THE GAME OF THE MAFIA</h1>
+        <h1 id="inicio">THE MAFIA GAME</h1>
     </header>
     <main>
-        <p class="p-init">Este juego es un juego casero que se juega con minimo 6 personas de manera presencial, esta pagina es para
-            facilitar el uso de una parsona ajena para el control del juego.</p>
-        <a href="https://es.wikihow.com/jugar-mafia" target="_blank">Reglas del juego</a>
+        <p class="p-init">El juego de la mafia se juega con minimo 6 personas de manera presencial, esta pagina es para
+            facilitar el control del juego a la persona que le toque dirigir. Para conocer mas sobre el juego te dejo las <a href="https://es.wikihow.com/jugar-mafia" target="_blank">Reglas del juego</a></p>
+        
         <h3>VALORES DE LAS CARTAS</h3>
         <ol>
             <li><a href="#Section-Mafia">12 = MAFIA</a></li>
@@ -29,42 +29,38 @@
             <li><a href="#Section-carnicero">3 = CARNICERO</a></li>
             <li><a href="#Section-pueblo">4 = PUEBLO</a></li>
         </ol>
-        <h5>Cantidad de participantes:</h5>
-        <button onclick="ingresarCantidad()" class="button cantidad">Click aca para ingresar cantidad</button>
-        <p id="mensaje"></p>
-        <h5>Ingresa los nombres de los jugadores</h5>
-        <button class="button name" onclick="ingresarJugadores(cantidad)">Ingresa los nombres de los jugadores</button>
-
-        
         <h3>PARTICIPANTES</h3>
+        <h5>Cantidad de participantes:</h5>
+        <input type="number" id="cantidad" placeholder="Cantidad de jugadores">
+        <button onclick="ingresarCantidad()" type="submit">Enviar</button>
+        <h5>Ingresa los nombres de los jugadores</h5>
+        <button class="button name" onclick="ingresarJugadores(nombres.length)">Ingresa los nombres de los jugadores</button>
+        <button type="reset" id="reset" onclick="reset()">Reset</button>
         <p id="jugadores">jugadores >>></p>
         <h4>RONDAS</h4>
         <form action="" method="get" name="formulario" id="formulario">
             <section id="Section-Mafia" class="section mafia">
-                <div><p>Ingresa el nombre de la mafia</p><input type="text" class="mafia" id="mafia"
-                    placeholder="Nombre de mafia"></div>
-                <div class="div-section"><p>Ingresa a quien la mafia desea matar</p><input type="text" class="mafia" id="muerto"
-                    placeholder="Nombre de quien quiere matar"></div>
+                <div><p>Ingresa el nombre de la mafia</p><select name="mafia" id="select-mafia"><option value="">Elige una opción</option><option value="">Son mas de 2 mafias</option></select></div>
+                <div class="div-section"><p>Ingresa a quien la mafia desea matar</p><select name="muerto" id="select-muerto"><option value="">Elige una opción</option></select></div>
                     <div class="div-section sgte"><a href="#Section-policia">SIGUIENTE</a></div>
             </section>
             <section id="Section-policia" class="section poli">
-                <div class="div-section"><p>Ingresa el nombre del policia</p><input type="text" class="policia" id="policia"
-                    placeholder="Nombre del policia"></div>
+                <div class="div-section"><p>Ingresa el nombre del policia</p><select name="policia" id="select-policia"><option value="">Elige una opción</option></select></div>
                     <div class="div-section sgte"><a href="#Section-doctor">SIGUIENTE</a></div>
             </section>
             <section id="Section-doctor" class="section doctor">
-                <div class="div-section"><p>Ingresa el nombre del  doctor</p><input type="text" class="doctor" id="doctor" placeholder="Nombre del doctor"></div>
-                <div class="div-section"><p>Ingresa el nombre de la persona que quiera curar</p><input type="text" class="doctor" id="curado" placeholder="Nombre de quien quiera curar"></div>
+                <div class="div-section"><p>Ingresa el nombre del  doctor</p><select name="doctor" id="select-doctor"><option value="">Elige una opción</option></select></div>
+                <div class="div-section"><p>Ingresa el nombre de la persona que quiera curar</p><select name="curado" id="select-curado"><option value="">Elige una opción</option></select></div>
                 <div class="div-section sgte"><a href="#Section-puta">SIGUIENTE</a></div>
             </section>
             <section id="Section-puta" class="section puta">
-                <div class="div-section"><p>Ingresa el nombre de la puta</p><input type="text" class="puta" id="puta" placeholder="Nombre de la puta"></div>
-                <div class="div-section"><p>Ingresa el nombre de quien quiera anular el trabajo</p><input type="text" class="puta" id="anulado" placeholder="Nombre de quien quiera anular"></div>
+                <div class="div-section"><p>Ingresa el nombre de la puta</p><select name="puta" id="select-puta"><option value="">Elige una opción</option></select></div>
+                <div class="div-section"><p>Ingresa el nombre de quien quiera anular el trabajo</p><select name="anulado" id="select-anulado"><option value="">Elige una opción</option></select></div>
                 <div class="div-section sgte"><a href="#Section-carnicero">SIGUIENTE</a></div>
             </section>
             <section id="Section-carnicero" class="section carnicero">
-                <div class="div-section"><p>Ingresa el nombre del carnicero</p><input type="text" class="carnicero" id="carnicero" placeholder="Nombre del carnicero"></div>
-                <div class="div-section"><p>Ingresa el nombre de quien quiera callar</p><input type="text" class="carnicero" id="callado" placeholder="Nombre del callado"></div>
+                <div class="div-section"><p>Ingresa el nombre del carnicero</p><select name="carnicero" id="select-carnicero"><option value="">Elige una opción</option></select></div>
+                <div class="div-section"><p>Ingresa el nombre de quien quiera callar</p><select name="callado" id="select-callado"><option value="">Elige una opción</option></select></div>
                 <div class="div-section sgte"><a href="#section-btn">SIGUIENTE</a></div>
             </section>
             <section class="section btn" id="section-btn">
